--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,11 +13,21 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor"
-            tools:targetApi="l">?attr/colorPrimaryVariant
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant
         </item>
 
     </style>
 
     <style name="Theme.MADApp" parent="Base.Theme.MADApp" />
+
+    <style name="Theme.MADApp.Fullscreen" parent="Theme.MADApp">
+        <item name="android:actionBarStyle">@style/Widget.Theme.MADApp.ActionBar.Fullscreen</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="ThemeOverlay.MADApp.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
 </resources>
