--- a/app/src/main/res/layout/fragment_carbonfootprint.xml
+++ b/app/src/main/res/layout/fragment_carbonfootprint.xml
@@ -78,7 +78,7 @@
             app:layout_constraintTop_toBottomOf="parent" />
 
         <Button
-            android:id="@+id/BtnNextQuestion"
+            android:id="@+id/BtnNextQuestionQ1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
