--- a/app/src/main/res/layout/fragment_carbonfootprint.xml
+++ b/app/src/main/res/layout/fragment_carbonfootprint.xml
@@ -99,4 +99,15 @@
             android:textSize="24sp" />
     </FrameLayout>
 
+    <ImageView
+        android:id="@+id/IVProgressBar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/progress_bar_cf"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVTitleTrackCF" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
