--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,149 +1,249 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
-    android:orientation="vertical">
+    android:background="#85C4F6">
 
-    <TextView
-        android:id="@+id/newstitle"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:gravity="center"
-        android:text="News"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <HorizontalScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="Scroll horizontally through items"
-        android:layout_marginEnd="10dp">
+        android:orientation="vertical">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="203dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="246dp">
+
+                <ImageView
+                    android:id="@+id/backgroundshape"
+                    android:layout_width="411dp"
+                    android:layout_height="246dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.085"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/top_background_gradient" />
+
+                <ImageView
+                    android:id="@+id/topbackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:layout_marginTop="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/top_background" />
+
+                <ImageView
+                    android:id="@+id/userimage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="32dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/backgroundshape"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/backgroundshape"
+                    app:layout_constraintVertical_bias="0.321"
+                    app:srcCompat="@drawable/profile" />
+
+                <TextView
+                    android:id="@+id/hello"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="52dp"
+                    android:text="Hello"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/backgroundshape" />
+
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="44dp"
+                    android:layout_marginTop="92dp"
+                    android:text="username"
+                    android:textColor="#ffffff"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@+id/backgroundshape"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <EditText
+                    android:id="@+id/searchBtn"
+                    android:layout_width="343dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/background_edittext_search"
+                    android:drawableEnd="@drawable/search_icon"
+                    android:ems="10"
+                    android:hint="    Search for...."
+                    android:inputType="text"
+                    app:layout_constraintBottom_toBottomOf="@+id/backgroundshape"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.529"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.919" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/newstitle"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:gravity="center"
+                android:text="News"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <HorizontalScrollView
+                android:id="@+id/horizontalScrollView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="12dp"
+                android:contentDescription="Scroll horizontally through items">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="203dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        app:srcCompat="@drawable/news1" />
+
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="197dp"
+                        android:layout_height="160dp"
+                        android:layout_marginStart="10dp"
+                        app:srcCompat="@drawable/news2" />
+
+                    <ImageView
+                        android:id="@+id/imageView6"
+                        android:layout_width="204dp"
+                        android:layout_height="158dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        app:srcCompat="@drawable/news3" />
+                </LinearLayout>
+            </HorizontalScrollView>
+
+            <TextView
+                android:id="@+id/programmestitle"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="28dp"
+                android:gravity="center"
+                android:text="Programmes"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <HorizontalScrollView
+                android:id="@+id/horizontalScrollView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="4dp"
+                android:contentDescription="Scroll horizontally through items">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="154dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        app:srcCompat="@drawable/zeroplastic" />
+
+                    <ImageView
+                        android:id="@+id/imageView7"
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        app:srcCompat="@drawable/programmes1" />
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="200dp"
+                        android:layout_height="181dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        app:srcCompat="@drawable/programmes2" />
+                </LinearLayout>
+            </HorizontalScrollView>
+
+            <TextView
+                android:id="@+id/organizationtitle"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Organizations"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <HorizontalScrollView
+                android:id="@+id/horizontalScrollView3"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                app:srcCompat="@drawable/news1" />
+                android:contentDescription="Scroll horizontally through items">
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="197dp"
-                android:layout_height="160dp"
-                android:layout_marginStart="10dp"
-                app:srcCompat="@drawable/news2" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="204dp"
-                android:layout_height="158dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:srcCompat="@drawable/news3" />
+                    <ImageView
+                        android:id="@+id/imageView8"
+                        android:layout_width="143dp"
+                        android:layout_height="151dp"
+                        android:layout_marginStart="10dp"
+                        app:srcCompat="@drawable/organization1" />
+
+                    <ImageView
+                        android:id="@+id/imageView9"
+                        android:layout_width="154dp"
+                        android:layout_height="148dp"
+                        android:layout_marginStart="10dp"
+                        app:srcCompat="@drawable/organization3" />
+
+                    <ImageView
+                        android:id="@+id/imageView10"
+                        android:layout_width="140dp"
+                        android:layout_height="146dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        app:srcCompat="@drawable/organization4" />
+                </LinearLayout>
+            </HorizontalScrollView>
+
         </LinearLayout>
-    </HorizontalScrollView>
-    <TextView
-        android:id="@+id/programmestitle"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:gravity="center"
-        android:text="Programmes"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+    </ScrollView>
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:contentDescription="Scroll horizontally through items">
+    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="154dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                app:srcCompat="@drawable/zeroplastic"/>
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                app:srcCompat="@drawable/programmes1"
-                />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="200dp"
-                android:layout_height="181dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:srcCompat="@drawable/programmes2"/>
-        </LinearLayout>
-    </HorizontalScrollView>
-
-    <TextView
-        android:id="@+id/organizationtitle"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:gravity="center"
-        android:text="Organizations"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:contentDescription="Scroll horizontally through items">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="143dp"
-                android:layout_height="151dp"
-                android:layout_marginStart="10dp"
-                app:srcCompat="@drawable/organization1" />
-
-            <ImageView
-                android:id="@+id/imageView9"
-                android:layout_width="154dp"
-                android:layout_height="148dp"
-                android:layout_marginStart="10dp"
-                app:srcCompat="@drawable/organization3" />
-
-            <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="140dp"
-                android:layout_height="146dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:srcCompat="@drawable/organization4" />
-        </LinearLayout>
-    </HorizontalScrollView>
-
-
-</LinearLayout>
-
+</androidx.core.widget.NestedScrollView>
