--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -72,7 +72,7 @@
 
     <fragment
         android:id="@+id/DestQuiz"
-        android:name="com.example.madapp.QuizFragment"
+        android:name="com.example.madapp.quiz.QuizFragment"
         android:label="Quiz"
         tools:layout="@layout/fragment_quiz" />
 
