--- a/app/src/main/res/layout/fragment_quiz_in.xml
+++ b/app/src/main/res/layout/fragment_quiz_in.xml
@@ -12,14 +12,17 @@
 
     <TextView
         android:id="@+id/TVTotalQuestion"
-        android:layout_width="121dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="170dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="32dp"
         android:background="@color/dark_blue"
         android:gravity="center"
         android:text="Total Question"
         android:textColor="@color/white"
+        android:textSize="17sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,10 +31,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
+        android:gravity="center"
         android:text="Question"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -87,17 +92,20 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/TVQuestionNo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Question . of ."
+        android:layout_marginTop="36dp"
+        android:text="Question No"
+        android:textSize="17sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="596dp" />
+        app:layout_constraintTop_toBottomOf="@+id/BtnSubmitAns" />
 
     <Button
-        android:id="@+id/BTNSubmitAns"
+        android:id="@+id/BtnSubmitAns"
         android:layout_width="136dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="47dp"
