--- a/app/src/main/res/layout/fragment_quiz_score.xml
+++ b/app/src/main/res/layout/fragment_quiz_score.xml
@@ -7,51 +7,44 @@
     android:background="@drawable/quiz_background_blue"
     tools:context=".quiz.QuizScoreFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="67dp"
-        android:text="Quiz score"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <GridLayout
-        android:layout_width="350dp"
-        android:layout_height="700dp"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/category_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
-
-        <androidx.cardview.widget.CardView
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+            android:layout_height="match_parent"
+            android:layout_marginTop="150dp">
 
-            <LinearLayout
+            <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:layout_height="match_parent"
+                android:columnCount="1"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/TVText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
-                    android:textAlignment="center"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    android:text="Quiz Scores"
+                    android:textAlignment="center" />
 
-    </GridLayout>
+                <TextView
+                    android:id="@+id/TVText2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Number"
+                    android:textAlignment="center" />
+
+
+            </GridLayout>
+
+
+        </ScrollView>
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
