--- a/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
+++ b/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
-    tools:context=".fragment_secondQuestionCalculateCF">
+    tools:context=".fragment_thridQuestionCalculateCF">
 
     <TextView
         android:id="@+id/TVTitleTrackCF"
@@ -76,7 +77,7 @@
             app:layout_constraintTop_toBottomOf="parent" />
 
         <Button
-            android:id="@+id/BtnPreviousQuestion2"
+            android:id="@+id/BtnPreviousQuestion3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|start"
@@ -88,14 +89,14 @@
             app:iconGravity="start" />
 
         <Button
-            android:id="@+id/BtnNextQuestionQ2"
-            android:layout_width="wrap_content"
+            android:id="@+id/BtnCompleteCF"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="30dp"
             android:backgroundTint="@color/blue_900"
-            android:text="Next Question"
+            android:text="Submit"
             app:icon="@drawable/next"
             app:iconGravity="end" />
 
@@ -112,11 +113,11 @@
     </FrameLayout>
 
     <ImageView
-        android:id="@+id/IVProgressBar2"
+        android:id="@+id/IVProgressBar3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:src="@drawable/progress_bar_cf2"
+        android:src="@drawable/progress_bar_cf3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
