add certificate feature and question 3 modify

--- a/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
+++ b/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
@@ -28,7 +28,7 @@
         android:layout_height="412dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="148dp"
+        android:layout_marginBottom="136dp"
         android:background="@drawable/rounded_frame_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,9 +40,9 @@
             android:layout_width="102dp"
             android:layout_height="33dp"
             android:layout_gravity="top"
-            android:layout_marginStart="280dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="110dp"
-            android:text="km"
+            android:text="RM"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/editTextText2"
@@ -53,10 +53,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="100dp"
             android:ems="10"
-            android:hint="Number"
+            android:hint="150"
             android:inputType="text"
             android:minHeight="48dp"
             app:layout_constraintStart_toStartOf="@id/TVQuestion"
@@ -69,7 +69,7 @@
             android:layout_gravity="top"
             android:layout_marginStart="50dp"
             android:layout_marginTop="30dp"
-            android:text="Distance travel in km"
+            android:text="Amount spent in RM"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:layout_marginBottom="200dp"
-            android:text="at a factor of 2.30000 kgCO2e/L"
+            android:text="at a factor of 11.38 kgCO2e/kg"
             android:textColor="#000000"
             android:textSize="24sp" />
 
