--- a/app/src/main/res/layout/fragment_carbonfootprint.xml
+++ b/app/src/main/res/layout/fragment_carbonfootprint.xml
@@ -30,7 +30,7 @@
         android:layout_height="412dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="148dp"
+        android:layout_marginBottom="136dp"
         android:background="@drawable/rounded_frame_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="100dp"
             android:ems="10"
-            android:hint="Number"
+            android:hint="220"
             android:inputType="text"
             android:minHeight="48dp"
             app:layout_constraintStart_toStartOf="@id/TVQuestion"
