--- a/app/src/main/res/layout/fragment_cf_second_question.xml
+++ b/app/src/main/res/layout/fragment_cf_second_question.xml
@@ -48,7 +48,7 @@
             app:layout_constraintTop_toBottomOf="@+id/TVQuestion1" />
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/ETAnsQ2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
