--- a/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
+++ b/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toBottomOf="@+id/TVQuestion1" />
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/ETAnsQ3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
