--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="blue_900">#0D47A1</color>
     <color name="orange_700">#F57C00</color>
     <color name="grey_600">#757575</color>
+    <color name="blue_100">#BBDEFB</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
