--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_200">#80CBC4</color>
     <color name="teal_700">#00897B</color>
     <color name="blue_900">#0D47A1</color>
+    <color name="orange_100">#FFE0B2</color>
+    <color name="orange_200">#FFCC80</color>
     <color name="orange_700">#F57C00</color>
     <color name="grey_600">#757575</color>
     <color name="blue_100">#BBDEFB</color>
