--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        android:background="@color/blue_100"
+        android:background="@color/orange_100"
         android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +37,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="Find"
-        android:backgroundTint="@color/blue_700"
+        android:textColor="@color/black"
+        android:backgroundTint="#ffa708"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:backgroundTint="@color/blue_100"
+        android:backgroundTint="@color/orange_200"
         android:clickable="true"
         android:src="@drawable/ic_map_reforest"
         app:layout_constraintBottom_toBottomOf="parent"
