Add custom dialog after quiz finish

--- a/app/src/main/res/layout/fragment_quiz_question.xml
+++ b/app/src/main/res/layout/fragment_quiz_question.xml
@@ -57,7 +57,7 @@
             android:layout_width="264dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:backgroundTint="@color/green_900"
+            android:backgroundTint="@color/purple_800"
             android:textColor="@color/white"
             android:text="Option 1"
             tools:layout_editor_absoluteX="163dp"
@@ -68,7 +68,7 @@
             android:layout_width="264dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:backgroundTint="@color/green_900"
+            android:backgroundTint="@color/purple_800"
             android:textColor="@color/white"
             android:text="Option 2"
             tools:layout_editor_absoluteX="162dp"
@@ -79,7 +79,7 @@
             android:layout_width="264dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:backgroundTint="@color/green_900"
+            android:backgroundTint="@color/purple_800"
             android:textColor="@color/white"
             android:text="Option 3"
             tools:layout_editor_absoluteX="160dp"
@@ -90,7 +90,7 @@
             android:layout_width="264dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:backgroundTint="@color/green_900"
+            android:backgroundTint="@color/purple_800"
             android:textColor="@color/white"
             android:text="Option 4"
             tools:layout_editor_absoluteX="162dp"
