--- a/app/src/main/res/layout/custom_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_dialog_layout.xml
@@ -1,31 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <!-- Add your custom views here -->
-    <TextView
-        android:id="@+id/customDialogTitle"
+    <ImageView
+        android:id="@+id/CustomIV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Custom Title"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:paddingBottom="8dp" />
+        android:paddingBottom="15dp"
+        android:layout_marginTop="-1dp"
+        tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/customDialogMessage"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Custom Message"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:paddingBottom="16dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
-    <!-- Add more custom views as needed -->
+        <TextView
+            android:id="@+id/customDialogTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Custom Title"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:paddingBottom="12dp" />
+
+        <TextView
+            android:id="@+id/customDialogMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Custom Message"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:paddingBottom="16dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
