--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,11 +13,12 @@
     <color name="grey_600">#757575</color>
     <color name="blue_100">#BBDEFB</color>
     <color name="green_900">#1B5E20</color>
-    <color name="very_light_green">#F1FFED</color>
+    <color name="very_light_green">#F1FFFD</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
     <color name="dark_blue">#3C5A8B</color>
+    <color name="purple_800">#6A1B9A</color>
 </resources>
