--- a/app/src/main/res/layout/fragment_quiz_question.xml
+++ b/app/src/main/res/layout/fragment_quiz_question.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/quiz_background_blue"
-    android:padding="16dp"
     tools:context=".quiz.QuizQuestionFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,7 +14,7 @@
         android:id="@+id/TVTotalQuestion"
         android:layout_width="170dp"
         android:layout_height="35dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:background="@color/dark_blue"
         android:gravity="center"
         android:text="Total Question"
@@ -32,6 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:gravity="center"
         android:text="Question"
         android:textSize="22sp"
@@ -123,5 +124,15 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <ImageView
+        android:id="@+id/IVBackToQuiz"
+        android:layout_width="39dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/ic_baseline_quiz_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
