add the custom dialog after user calculate the CF, if lowe than average will have button to download , if not will have button to back to home

--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -150,7 +150,7 @@
     <fragment
         android:id="@+id/DestCertificate"
         android:name="com.example.madapp.DestCertificate"
-        android:label="fragment_dest_certificate"
+        android:label="Download Certificate"
         tools:layout="@layout/fragment_dest_certificate" />
     <fragment
         android:id="@+id/explainTips1Fragment"
