news(cannot fetch data from api if someone know can help) programmes(only first one can click to seedetail,will add now) organization(will change the openwebsite method) username(need to get from firebase)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:id="@+id/TBMainAct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorSecondary"
+            android:background="@color/teal_200"
             android:minHeight="?attr/actionBarSize"
             app:title="Reforestation" />
 
