--- a/app/src/main/res/drawable/white_top_button.xml
+++ b/app/src/main/res/drawable/white_top_button.xml
@@ -2,8 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <corners android:bottomLeftRadius="60dp" android:bottomRightRadius="60dp"/>
-        <gradient android:startColor="#69A6F1" android:endColor="#354CEA" android:angle="0"/>
+        <solid android:color="#ffffff"/>
+        <corners android:radius="18sp"/>
+
     </shape>
+
 </item>
 </selector>
