--- a/app/src/main/res/layout/fragment_organizations.xml
+++ b/app/src/main/res/layout/fragment_organizations.xml
@@ -1,50 +1,301 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="270dp"
-    android:layout_margin="10dp"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/blue">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView3"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="6dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/bestSellerImage"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:src="@drawable/organization1"
-            android:scaleType="fitXY" />
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="264dp"
-        android:layout_height="56dp"
-        android:backgroundTint="@color/white"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView3">
-
-        <TextView
-            android:id="@+id/bestSellerText"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Global Environment Centre (GEC)"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-    </androidx.cardview.widget.CardView>
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/lowerpart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <GridLayout
+                    android:layout_width="353dp"
+                    android:layout_height="715dp"
+                    android:layout_marginTop="16dp"
+                    android:columnCount="1"
+                    android:rowCount="5"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="169dp"
+                            android:layout_height="143dp"
+                            android:background="@drawable/organization_background"
+                            android:gravity="top"
+                            android:orientation="vertical"
+                            android:padding="4dp">
+
+                            <ImageButton
+                                android:id="@+id/organizationButton1"
+                                android:layout_width="157dp"
+                                android:layout_height="94dp"
+                                android:contentDescription="Description of the image or purpose of the button"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/organization1" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:layout_marginTop="1dp"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/organiation_name1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:maxLines="3"
+                                    android:textColor="@color/black"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:text="Global Environment Centre" />
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="169dp"
+                            android:layout_height="143dp"
+                            android:layout_marginLeft="16dp"
+                            android:background="@drawable/organization_background"
+                            android:gravity="top"
+                            android:orientation="vertical"
+                            android:padding="4dp">
+
+                            <ImageButton
+                                android:id="@+id/organizationButton2"
+                                android:layout_width="157dp"
+                                android:layout_height="94dp"
+                                android:contentDescription="Description of the image or purpose of the button"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/organization2" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:layout_marginTop="1dp"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/organiation_name2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:maxLines="3"
+                                    android:textColor="@color/black"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:text="EcoKnights" />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="19dp"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="169dp"
+                            android:layout_height="143dp"
+                            android:background="@drawable/organization_background"
+                            android:gravity="top"
+                            android:orientation="vertical"
+                            android:padding="4dp">
+
+                            <ImageButton
+                                android:id="@+id/organizationButton3"
+                                android:layout_width="157dp"
+                                android:layout_height="94dp"
+                                android:contentDescription="Description of the image or purpose of the button"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/organization3" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:layout_marginTop="1dp"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/organiation_name3"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:maxLines="3"
+                                    android:textColor="@color/black"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:text="Ecolawgy" />
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="169dp"
+                            android:layout_height="143dp"
+                            android:layout_marginLeft="16dp"
+                            android:background="@drawable/organization_background"
+                            android:gravity="top"
+                            android:orientation="vertical"
+                            android:padding="4dp">
+
+                            <ImageButton
+                                android:id="@+id/organizationButton4"
+                                android:layout_width="157dp"
+                                android:layout_height="94dp"
+                                android:contentDescription="Description of the image or purpose of the button"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/organization4" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:layout_marginTop="1dp"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/organiation_name4"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:maxLines="3"
+                                    android:textColor="@color/black"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:text="GREENPEACE" />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="19dp"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="169dp"
+                            android:layout_height="143dp"
+                            android:background="@drawable/organization_background"
+                            android:gravity="top"
+                            android:orientation="vertical"
+                            android:padding="4dp">
+
+                            <ImageButton
+                                android:id="@+id/organizationButton5"
+                                android:layout_width="157dp"
+                                android:layout_height="94dp"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/organization5"
+                                android:contentDescription="Description of the image or purpose of the button"/>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:layout_marginTop="1dp"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/organiation_name5"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:maxLines="3"
+                                    android:textColor="@color/black"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:gravity="center"
+                                    android:text="Malaysian Nature Society" />
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="169dp"
+                            android:layout_height="143dp"
+                            android:background="@drawable/organization_background"
+                            android:gravity="top"
+                            android:layout_marginLeft="16dp"
+                            android:orientation="vertical"
+                            android:padding="4dp">
+
+                            <ImageButton
+                                android:id="@+id/organizationButton6"
+                                android:layout_width="157dp"
+                                android:layout_height="94dp"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/organization6"
+                                android:contentDescription="Description of the image or purpose of the button"/>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:layout_marginTop="1dp"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/organiation_name6"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:maxLines="3"
+                                    android:textColor="@color/black"
+                                    android:textSize="14sp"
+                                    android:textStyle="bold"
+                                    android:gravity="center"
+                                    android:text="Treat Every Environment Special Sdn Bhd." />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/textViewMoreOrganizations"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="140dp"
+                        android:layout_marginTop="30dp"
+                        android:clickable="true"
+                        android:minHeight="48dp"
+                        android:onClick="openGoogleOrganizationsList"
+                        android:text="Want to see more organizations ?"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+
+                </GridLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
