--- a/app/src/main/res/layout/fragment_article_reforest.xml
+++ b/app/src/main/res/layout/fragment_article_reforest.xml
@@ -8,180 +8,186 @@
     android:background="@drawable/background_articles"
     tools:context=".ArticleReforestFragment">
 
-
-    <GridLayout
-        android:layout_width="350dp"
+    <ScrollView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="@drawable/article_back"
-        android:columnCount="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/CVArticle1"
-            android:layout_width="match_parent"
+        <GridLayout
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/very_light_green"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+            android:background="@drawable/article_back"
+            android:columnCount="1">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/CVArticle1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_marginBottom="30dp"
+                android:backgroundTint="@color/very_light_green"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp">
 
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="20dp"
-                    android:src="@drawable/article1" />
-
-                <TextView
-                    android:id="@+id/textView1"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tree Planting Is Booming. Here’s How That Could Help, or Harm, the Planet"
-                    android:textAlignment="center" />
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/imageView1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="20dp"
+                        android:src="@drawable/article1" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/CVArticle2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/very_light_green"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+                    <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tree Planting Is Booming. Here’s How That Could Help, or Harm, the Planet"
+                        android:textAlignment="center" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/CVArticle2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_marginBottom="30dp"
+                android:backgroundTint="@color/very_light_green"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp">
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="20dp"
-                    android:src="@drawable/article2" />
-
-                <TextView
-                    android:id="@+id/textView2"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Reforestation Means More Than Just Planting Trees"
-                    android:textAlignment="center" />
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="20dp"
+                        android:src="@drawable/article2" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/CVArticle3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/very_light_green"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Reforestation Means More Than Just Planting Trees"
+                        android:textAlignment="center" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/CVArticle3"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_marginBottom="30dp"
+                android:backgroundTint="@color/very_light_green"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp">
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="20dp"
-                    android:src="@drawable/article3" />
-
-                <TextView
-                    android:id="@+id/textView3"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tree Planting ‘Has Mind-Blowing Potential’ To Tackle Climate Crisis"
-                    android:textAlignment="center" />
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="20dp"
+                        android:src="@drawable/article3" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/CVArticle4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/very_light_green"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tree Planting ‘Has Mind-Blowing Potential’ To Tackle Climate Crisis"
+                        android:textAlignment="center" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/CVArticle4"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_marginBottom="30dp"
+                android:backgroundTint="@color/very_light_green"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp">
 
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="20dp"
-                    android:src="@drawable/article4" />
-
-                <TextView
-                    android:id="@+id/textView4"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Reforestation: Pros, Cons   And Effects On Planet"
-                    android:textAlignment="center" />
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="20dp"
+                        android:src="@drawable/article4" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/CVArticle5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/very_light_green"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Reforestation: Pros, Cons   And Effects On Planet"
+                        android:textAlignment="center" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/CVArticle5"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_marginBottom="30dp"
+                android:backgroundTint="@color/very_light_green"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp">
 
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="20dp"
-                    android:src="@drawable/article5" />
-
-                <TextView
-                    android:id="@+id/textView5"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Responsible Reforestation: How To Grow Trees To Solve Climate Change"
-                    android:textAlignment="center" />
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="20dp"
+                        android:src="@drawable/article5" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Responsible Reforestation: How To Grow Trees To Solve Climate Change"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
 
-    </GridLayout>
+        </GridLayout>
+
+    </ScrollView>
+
 
 
 
